@startuml
!include style.puml
'https://plantuml.com/class-diagram

skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

class Folder
class Person
class FolderName
class Name
class Phone
class Tag
class Address
class Email

Person --> Name
Person --> Phone
Person --> Address
Person --> Email
Person --> "*" Tag
Person --> "*" Folder
Folder --> FolderName
@enduml
